--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
     </header>
     <main class="col-12 col-lg-9 d-flex flex-column">
       <!-- todo start -->
-      <div class="col-12 col-md-6 col-xl-3 mb-3">
-        <div class="card">
-          <h4 class="card-header bg-dark text-light">
-            To Do
-          </h4>
-          <ul id="list-toDo" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m-1">Sample task to do</p>
-            </li>
-          </ul>
+      <div class="m-5 row justify-content-around">
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <div class="card">
+            <h4 class="card-header bg-dark text-light">
+              To Do
+            </h4>
+            <ul id="list-toDo" class="list-group list-group-flush">
+              <li class="list-group-item">
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task to do</p>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
       <!-- todo end -->
       <!-- in progress start -->
       <div class="col-12 col-md-6 col-xl-3 mb-3">
@@ -78,8 +79,9 @@
         </div>
       </div>
       <!-- done end -->
-        <div id="trash">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
+    </div>
+        <div id="trash" class="mt-auto">
+          <div class="w-100 bg-danger p-3 text-center text-light display-4 ">
             Drop Here to Remove.
           </div>
         </div>
