--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
               <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task to do</p>
+                <span class="badge badge-primary badge-pill"></span>
+                <p class="m-1"></p>
               </li>
             </ul>
           </div>
@@ -49,8 +49,8 @@
           <h4 class="card-header bg-dark text-light">In Progress</h4>
             <ul id="list-inProgress" class="list-group list-group-flush">
               <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task in progress</p>
+                <span class="badge badge-primary badge-pill"></span>
+                <p class="m-1"></p>
               </li>
             </ul>
         </div>
@@ -62,8 +62,8 @@
           <h4 class="card-header bg-dark text-light">In Review</h4>
           <ul id="list-inReview" class="list-group list-group-flush">
             <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m-1">Sample task in review</p>
+              <span class="badge badge-primary badge-pill"></span>
+              <p class="m-1"></p>
             </li>
           </ul>
         </div>
@@ -75,8 +75,8 @@
           <h4 class="card-header bg-dark text-light">Done</h4>
           <ul id="list-done" class="list-group list-group-flush">
             <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m-1">Sample task that's done</p>
+              <span class="badge badge-primary badge-pill"></span>
+              <p class="m-1"></p>
             </li>
           </ul>
         </div>
